--- a/web/v2/ui/shared/icon.templ
+++ b/web/v2/ui/shared/icon.templ
@@ -12,6 +12,18 @@ templ IconXs(name string) {
 	<i data-feather={ name } class="h-4 w-4"></i>
 }
 
+templ SpinningIcon(name string) {
+	<i data-feather={ name } class="animate-spin-slow"></i>
+}
+
+templ SpinningIconSm(name string) {
+	<i data-feather={ name } class="h-5 w-5 animate-spin-slow"></i>
+}
+
+templ SpinningIconXs(name string) {
+	<i data-feather={ name } class="h-4 w-4 animate-spin-slow"></i>
+}
+
 templ LoadingIcon() {
 	<i data-feather="loader" class="hx-indicator animate-spin opacity-70"></i>
 }
