--- a/web/v2/ui/pages/invoices-cancel.templ
+++ b/web/v2/ui/pages/invoices-cancel.templ
@@ -11,9 +11,12 @@ templ InvoicesCancelingsPage(cancelingsByDate []map[string][]*models.InvoiceCanc
 			@forms.CancelInvoiceForm(cancelingForForm, entities)
 			@shared.ToggleElementVisibilityButton("#cancel-invoice-form")
 		</div>
-		<div class="grid grid-cols-1 items-center 2xl:grid-cols-5">
-			<h2 class="col-span-3 text-base font-medium">Histórico de Operações (Cancelamentos)</h2>
-			@shared.FiltersByDate("#canceling-list", "/invoices/cancel/list")
+		<div class="flex flex-col gap-2 xl:mt-3 xl:flex-row xl:justify-between">
+			<h2 class="col-span-3 py-2 text-center text-base font-medium sm:py-3 md:py-0 md:text-left">Histórico de Operações (Cancelamentos)</h2>
+			<div class="grid grid-cols-1 gap-2 lg:grid-cols-7 lg:gap-6 xl:w-3/4 2xl:w-3/5">
+				@shared.FiltersByDate("#canceling-list", "/invoices/cancel/list")
+				@shared.FiltersByEntity("#canceling-list", "/invoices/cancel/list", entities)
+			</div>
 		</div>
 		@components.InvoicesCancelingsList(cancelingsByDate)
 	</div>
