--- a/web/v2/ui/pages/invoices.templ
+++ b/web/v2/ui/pages/invoices.templ
@@ -23,9 +23,12 @@ templ InvoicesPage(invoicesByDate []map[string][]*models.Invoice) {
 				}
 			</div>
 		</div>
-		<div class="grid grid-cols-1 items-center 2xl:grid-cols-5">
-			<h2 class="col-span-3 text-base font-medium">Histórico de Operações (Notas Fiscais)</h2>
-			@shared.FiltersByDate("#invoice-list", "/invoices/list")
+		<div class="flex flex-col gap-2 xl:flex-row xl:justify-between">
+			<h2 class="col-span-3 py-2 text-center text-base font-medium sm:py-3 md:py-0 md:text-left">Histórico de Operações (Notas Fiscais)</h2>
+			<div class="grid grid-cols-1 gap-2 lg:grid-cols-7 lg:gap-6 xl:w-3/4 2xl:w-3/5">
+				@shared.FiltersByDate("#invoice-list", "/invoices/list")
+				@shared.FiltersByEntity("#invoice-list", "/invoices/list", []*models.Entity{})
+			</div>
 		</div>
 		@components.InvoiceList(invoicesByDate)
 	</div>
