--- a/web/v2/ui/pages/metrics.templ
+++ b/web/v2/ui/pages/metrics.templ
@@ -11,9 +11,12 @@ templ MetricsPage(metricsByDate []map[string][]*models.Metrics, m *models.Metric
 			@forms.MetricsForm(m, entities)
 			@shared.ToggleElementVisibilityButton("#metrics-form")
 		</div>
-		<div class="grid grid-cols-1 items-center 2xl:grid-cols-5">
+		<div class="flex flex-col gap-2 xl:mt-3 xl:flex-row xl:justify-between">
 			<h2 class="col-span-3 py-2 text-center text-base font-medium sm:py-3 md:py-0 md:text-left">Histórico de Operações (Métricas)</h2>
-			@shared.FiltersByDate("#metrics-list", "/metrics/list")
+			<div class="grid grid-cols-1 gap-2 lg:grid-cols-7 lg:gap-6 xl:w-3/4 2xl:w-3/5">
+				@shared.FiltersByDate("#metrics-list", "/metrics/list")
+				@shared.FiltersByEntity("#metrics-list", "/metrics/list", entities)
+			</div>
 		</div>
 		@components.MetricsList(metricsByDate)
 	</div>
