--- a/web/v2/ui/shared/filters.templ
+++ b/web/v2/ui/shared/filters.templ
@@ -3,14 +3,16 @@ package shared
 import "fmt"
 import "github.com/cayo-rodrigues/nff/web/utils"
 import "time"
+import "github.com/cayo-rodrigues/nff/web/models"
 
+// Date filters
 templ FiltersByDate(listTarget string, endpoint string) {
-	<div id="filters-container" class="mt-2 w-full md:w-fit 2xl:col-span-2 2xl:mt-0 2xl:w-full">
+	<div id="filters-container" class="lg:col-span-5">
 		<fieldset class="relative rounded border border-gray-300 text-center sm:text-start">
 			<legend class="-left-4 top-2 rounded border border-gray-300 bg-gray-200 p-1 text-center md:absolute">
-				@IconSm("filter")
+				@IconSm("calendar")
 			</legend>
-			<section class="grid w-full grid-cols-2 gap-2 px-2 py-2 pl-5 sm:grid-cols-5 md:w-fit 2xl:w-full">
+			<section class="grid w-full grid-cols-2 gap-2 px-2 py-2 sm:grid-cols-5 md:w-fit md:pl-5 lg:w-full xl:h-12 xl:items-center">
 				@DateFilterOption(listTarget, endpoint, 60) {
 					Últimos 60 dias 
 				}
@@ -67,4 +69,21 @@ func listQueryParams(daysRange int) string {
 
 func filterButtonTarget(daysRange int) string {
 	return fmt.Sprintf("#filter-button-%d > button", daysRange)
+}
+
+// Entity filters
+templ FiltersByEntity(listTarget string, endpoint string, entities []*models.Entity) {
+	<div id="entity-filters-container" class="lg:col-span-2">
+		<fieldset class="relative rounded border border-gray-300 text-center sm:text-start">
+			<legend class="-left-4 top-2 rounded border border-gray-300 bg-gray-200 p-1 text-center md:absolute">
+				@IconSm("users")
+			</legend>
+			<section class="px-2 md:w-fit md:pl-5 lg:w-full">
+				@SelectInput(&InputData{
+					ID:      "entity-filter",
+					Options: &InputOptions{EntityOptions: entities},
+				})
+			</section>
+		</fieldset>
+	</div>
 }
