--- a/web/v2/ui/pages/invoices.templ
+++ b/web/v2/ui/pages/invoices.templ
@@ -4,7 +4,7 @@ import "github.com/cayo-rodrigues/nff/web/models"
 import "github.com/cayo-rodrigues/nff/web/ui/shared"
 import "github.com/cayo-rodrigues/nff/web/ui/components"
 
-templ InvoicesPage(invoicesByDate []map[string][]*models.Invoice) {
+templ InvoicesPage(invoicesByDate []map[string][]*models.Invoice, entities []*models.Entity) {
 	<div class="flex flex-col gap-3">
 		<div class="flex flex-col gap-2 border-b pb-3 sm:flex-row">
 			<dialog id="invoice-form-dialog" class="m-auto h-full w-full rounded bg-gray-50 shadow shadow-gray-600">
@@ -27,7 +27,7 @@ templ InvoicesPage(invoicesByDate []map[string][]*models.Invoice) {
 			<h2 class="col-span-3 py-2 text-center text-base font-medium sm:py-3 md:py-0 md:text-left">Histórico de Operações (Notas Fiscais)</h2>
 			<div class="grid grid-cols-1 gap-2 lg:grid-cols-7 lg:gap-6 xl:w-3/4 2xl:w-3/5">
 				@shared.FiltersByDate("#invoice-list", "/invoices/list")
-				@shared.FiltersByEntity("#invoice-list", "/invoices/list", []*models.Entity{})
+				@shared.FiltersByEntity("#invoice-list", "/invoices/list", entities)
 			</div>
 		</div>
 		@components.InvoiceList(invoicesByDate)
