--- a/web/v2/ui/shared/button.templ
+++ b/web/v2/ui/shared/button.templ
@@ -1,7 +1,5 @@
 package shared
 
-import "fmt"
-
 templ Button(theme string, size string, attrs templ.Attributes) {
 	<button class={ GetButtonClassesByTheme(theme, size) } { attrs... }>
 		{ children... }
@@ -74,17 +72,10 @@ templ DefaultButtonLight(size string) {
 	}
 }
 
-templ DefaultButtonOutline(size string, active ...bool) {
-	@Button(getThemeByActiveStatus("default-outline", active...), size, templ.Attributes{"type": "button"}) {
+templ DefaultButtonOutline(size string) {
+	@Button("default-outline", size, templ.Attributes{"type": "button"}) {
 		{ children... }
 	}
-}
-
-func getThemeByActiveStatus(theme string, active ...bool) string {
-	if len(active) > 0 && active[0] == true {
-		return fmt.Sprintf("%s-active", theme)
-	}
-	return theme
 }
 
 func GetButtonClassesByTheme(theme string, size string) string {
