--- a/web/v2/ui/forms/entities.templ
+++ b/web/v2/ui/forms/entities.templ
@@ -93,13 +93,13 @@ templ EntityForm(e *models.Entity) {
 				</fieldset>
 			</div>
 			<div class="grid grid-cols-2 gap-6 sm:grid-cols-3">
-				<div class={ fmt.Sprintf("col-span-full mt-4 sm:col-span-%s", getColSpanByAction(e)) }>
-					@shared.Button(getThemeByAction(e), "md", templ.Attributes{"type": "submit"}) {
-						@shared.Icon(getIconNameByAction(e))
-						<span>{ getTextByAction(e) }</span>
-					}
-				</div>
 				if e.ID != 0 {
+					<div class="col-span-2 mt-4 sm:col-span-1">
+						@shared.SubmitInfoButton("md") {
+							@shared.Icon("edit")
+							<span>Atualizar</span>
+						}
+					</div>
 					<div class="mt-4" hx-delete={ fmt.Sprintf("/entities/delete/%d", e.ID) }>
 						@shared.DefaultButton("md") {
 							@shared.Icon("trash-2")
@@ -112,38 +112,17 @@ templ EntityForm(e *models.Entity) {
 							<span>Registrar</span>
 						}
 					</div>
+				} else {
+					<div class="col-span-full mt-4">
+						@shared.SubmitButton("md") {
+							@shared.Icon("user-plus")
+							<span>Registrar</span>
+						}
+					</div>
 				}
 			</div>
 		</form>
 	</div>
-}
-
-func getColSpanByAction(e *models.Entity) string {
-	if e.ID == 0 {
-		return "full"
-	}
-	return "1"
-}
-
-func getThemeByAction(e *models.Entity) string {
-	if e.ID == 0 {
-		return "success"
-	}
-	return "info"
-}
-
-func getTextByAction(e *models.Entity) string {
-	if e.ID == 0 {
-		return "Registrar"
-	}
-	return "Atualizar"
-}
-
-func getIconNameByAction(e *models.Entity) string {
-	if e.ID == 0 {
-		return "user-plus"
-	}
-	return "edit"
 }
 
 func getHxAttrsByAction(e *models.Entity) templ.Attributes {
