--- a/web/v2/ui/layouts/base.templ
+++ b/web/v2/ui/layouts/base.templ
@@ -12,6 +12,7 @@ templ Base(page templ.Component) {
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 			<link href="/static/css/tailwind.css" rel="stylesheet"/>
 			<link href="/static/css/custom.css" rel="stylesheet"/>
+			<link rel="icon" href="/static/icons/icon.ico" type="image/x-icon"/>
 			<script src="/static/js/3p/htmx.min.js"></script>
 			<script src="/static/js/3p/response-targets.js"></script>
 			<script src="/static/js/3p/sse.js"></script>
@@ -35,4 +36,3 @@ templ Base(page templ.Component) {
 		</body>
 	</html>
 }
-
