--- a/web/v2/ui/shared/input.templ
+++ b/web/v2/ui/shared/input.templ
@@ -17,6 +17,11 @@ type FirstInputOption struct {
 	Disabled bool
 }
 
+type InputHelpInfo struct {
+	Title string
+	Link  string
+}
+
 type InputData struct {
 	ErrMsg        string
 	InputType     string
@@ -30,6 +35,7 @@ type InputData struct {
 	Class         string
 	HxIndicatorID string
 	FirstOption   *FirstInputOption
+	Help          *InputHelpInfo
 }
 
 func (data *InputData) Wide() *InputData {
@@ -64,7 +70,19 @@ templ WideSelectInput(data *InputData) {
 
 templ Input(data *InputData) {
 	<div class={ data.GetClassName() }>
-		<label class="truncate" for={ data.ID }><strong>{ data.Label }</strong></label>
+		<label class="flex items-center gap-2 truncate" for={ data.ID }>
+			<strong>{ data.Label }</strong>
+			if data.Help != nil {
+				<a
+					target="_blank"
+					href={ templ.URL(data.Help.Link) }
+					title={ data.Help.Title }
+					class="text-sky-500"
+				>
+					@IconXs("help-circle")
+				</a>
+			}
+		</label>
 		<input
 			class="h-8 rounded border border-gray-300 bg-white px-2 py-1 outline-0 focus-within:border-gray-500"
 			if data.InputType != "" {
@@ -99,6 +117,16 @@ templ SelectInput(data *InputData) {
 	<div class={ data.GetClassName() }>
 		<label class="flex items-center gap-2 truncate" for={ data.ID }>
 			<strong>{ data.Label }</strong>
+			if data.Help != nil {
+				<a
+					target="_blank"
+					href={ templ.URL(data.Help.Link) }
+					title={ data.Help.Title }
+					class="text-sky-500"
+				>
+					@IconXs("help-circle")
+				</a>
+			}
 			if data.HxIndicatorID != "" {
 				<span id={ data.HxIndicatorID }>
 					@LoadingIconXs()
