--- a/web/v2/ui/pages/login.templ
+++ b/web/v2/ui/pages/login.templ
@@ -4,7 +4,7 @@ import "github.com/cayo-rodrigues/nff/web/models"
 import "github.com/cayo-rodrigues/nff/web/ui/forms"
 
 templ LoginPage(u *models.User) {
-	<div class="flex h-full items-center justify-center">
+	<div class="mt-40 flex h-full items-center justify-center">
 		@forms.LoginForm(u)
 	</div>
 }
