not a big deal (yet!)

--- a/web/v2/ui/shared/notification.templ
+++ b/web/v2/ui/shared/notification.templ
@@ -4,6 +4,7 @@ import "strconv"
 import "github.com/cayo-rodrigues/nff/web/utils"
 import "github.com/cayo-rodrigues/nff/web/models"
 import "fmt"
+import "github.com/cayo-rodrigues/nff/web/services"
 
 templ NotificationBell(isAuthenticated bool) {
 	<button onclick="ShowNotificationDialog()" class="relative transform rounded-full transition hover:bg-sky-800 active:scale-90 xl:p-2">
@@ -36,7 +37,7 @@ templ NotificationDialog() {
 				}
 			</div>
 		</div>
-		@NotificationList(nil)
+		@NotificationList(services.GetNotifications(ctx))
 		<div
 			class="hidden" 
 			hx-get="/notifications"
