--- a/web/ui/components/invoices.templ
+++ b/web/ui/components/invoices.templ
@@ -1,11 +1,13 @@
 package components
 
-import "github.com/cayo-rodrigues/nff/web/models"
-import "fmt"
-import "github.com/cayo-rodrigues/nff/web/ui/shared"
-import "github.com/cayo-rodrigues/nff/web/ui/scripts"
-import "strconv"
-import "github.com/cayo-rodrigues/nff/web/utils"
+import (
+	"fmt"
+	"github.com/cayo-rodrigues/nff/web/models"
+	"github.com/cayo-rodrigues/nff/web/ui/scripts"
+	"github.com/cayo-rodrigues/nff/web/ui/shared"
+	"github.com/cayo-rodrigues/nff/web/utils"
+	"strconv"
+)
 
 templ InvoiceList(invoicesByDate []map[string][]*models.Invoice) {
 	<section
@@ -47,7 +49,10 @@ templ InvoiceCard(i *models.Invoice) {
 			<li class="md:truncate"><span class="font-medium">Destinatário:</span> { i.Recipient.Name }</li>
 		</ul>
 		<div class="grid grid-cols-6 gap-2 p-2 sm:absolute sm:bottom-2 sm:right-2 sm:grid-cols-2 sm:p-0">
-			<div onclick={ scripts.OpenDialogWithEvent(invoiceDetailsDialogTarget(i), invoiceItemsEventName(i)) } title="Ver detalhes">
+			<div
+				onclick={ scripts.OpenDialogWithEvent(invoiceDetailsDialogTarget(i), invoiceItemsEventName(i)) }
+				title="Ver detalhes"
+			>
 				@shared.WarningButton("xs") {
 					@shared.IconSm("eye")
 				}
@@ -116,16 +121,17 @@ templ InvoiceDetailsDialog(i *models.Invoice) {
 				<li><span class="font-medium">Remetente:</span> { i.Sender.Name }</li>
 				<li><span class="font-medium">IE do Remetente:</span> { i.SenderIe }</li>
 				<li><span class="font-medium">Destinatário:</span> { i.Recipient.Name }</li>
+				<li><span class="font-medium">IE do Destinatário:</span> { i.RecipientIe}</li>
 				<li><span class="font-medium">Operação:</span> { i.Operation }</li>
-				<li><span class="font-medium">CFOP:</span> { strconv.Itoa(i.Cfop) }</li>
 				<li><span class="font-medium">Contribuinte ICMS:</span> { i.IsIcmsContributor }</li>
 				<li><span class="font-medium">Consumidor Final:</span> { i.IsFinalCustomer }</li>
 				<li><span class="font-medium">Frete:</span> { utils.Float64ToString(i.Shipping) } </li>
 				<li><span class="font-medium">Adicionar Frete ao Total:</span> { i.AddShippingToTotal } </li>
 				<li><span class="font-medium">GTA:</span> { i.Gta } </li>
-				<li><span class="font-medium">Prefixo do nome do arquivo:</span> { i.CustomFileNamePrefix } </li>
-				<li><span class="font-medium">Nome completo do arquivo:</span> { i.FileName } </li>
+				<li class="col-span-2"><span class="font-medium">CFOP:</span> { i.Cfop }</li>
 				<li class="col-span-2"><span class="font-medium">Informações Complementares:</span> { i.ExtraNotes } </li>
+				<li><span class="font-medium">Prefixo do nome do arquivo:</span> { i.CustomFileNamePrefix } </li>
+				<li class="col-span-2"><span class="font-medium">Nome completo do arquivo:</span> { i.CustomFileNamePrefix } (NFA-123.789.456).pdf </li>
 			</ul>
 			@InvoiceItemsDetails(i)
 		</div>
@@ -196,9 +202,15 @@ templ CancelingConfirmationDialog(i *models.Invoice) {
 	<dialog id={ cancelingConfirmationDialogID(i) } class="rounded sm:w-3/4 md:w-3/5 lg:w-1/2 xl:w-1/3 2xl:w-1/4">
 		<div class="rounded border border-gray-200 p-4 shadow shadow-gray-300">
 			<h3 class="text-center text-xl font-bold">Quer mesmo cancelar a nota fiscal?</h3>
-			<p class="pb-4 pt-2 text-center text-sm text-gray-700">Isso irá iniciar uma operação de cancelamento de NFA no Siare. A justificativa será "A nota possui dados incorretos".</p>
+			<p class="pb-4 pt-2 text-center text-sm text-gray-700">
+				Isso irá iniciar uma operação de cancelamento de
+				NFA no Siare. A justificativa será "A nota possui dados incorretos".
+			</p>
 			<div class="grid grid-cols-2 gap-2">
-				<div hx-post={ fmt.Sprintf("/invoices/cancel/%d", i.ID) } onclick={ scripts.CloseDialog(cancelingConfirmationDialogTarget(i)) }>
+				<div
+					hx-post={ fmt.Sprintf("/invoices/cancel/%d", i.ID) }
+					onclick={ scripts.CloseDialog(cancelingConfirmationDialogTarget(i)) }
+				>
 					@shared.ErrorButton("md") {
 						Sim
 					}
