--- a/web/ui/shared/footer.templ
+++ b/web/ui/shared/footer.templ
@@ -37,12 +37,6 @@ templ Footer() {
 							<span>Reporte um bug</span>
 						}
 					</a>
-					<a href={ templ.SafeURL(githubIssueUrl("feature_request")) } target="_blank">
-						@PhantomLightButton("md") {
-							@Icon("package")
-							<span>Peça uma feature</span>
-						}
-					</a>
 					<a href={ templ.SafeURL(githubIssueUrl("feedback")) } target="_blank">
 						@PhantomLightButton("md") {
 							@Icon("smile")
@@ -59,6 +53,8 @@ func githubIssueUrl(templateName string) string {
 	switch templateName {
 		case "bug_report":
 			return "https://github.com/cayo-rodrigues/nff/issues/new?assignees=cayo-rodrigues&labels=bug&projects=&template=bug_report.yaml&title=%5BBug%5D%3A+"
+		case "feedback":
+			return "https://github.com/cayo-rodrigues/nff/issues/new?assignees=cayo-rodrigues&projects=&template=feedback.yaml&title=%5BFeedback%5D%3A+"
 	}
-	return fmt.Sprintf("https://github.com/cayo-rodrigues/nff/issues/new?assignees=cayo-rodrigues&labels=&template=%s.md&title=", templateName)
+	return ""
 }
