--- a/web/ui/shared/footer.templ
+++ b/web/ui/shared/footer.templ
@@ -52,7 +52,7 @@ func githubIssueUrl(templateName string) string {
 		case "bug_report":
 			return "https://github.com/cayo-rodrigues/nff/issues/new?assignees=cayo-rodrigues&labels=bug&projects=&template=bug_report.yaml&title=%5BBug%5D%3A+"
 		case "feedback":
-			return "https://github.com/cayo-rodrigues/nff/issues/new?assignees=cayo-rodrigues&projects=&template=feedback.yaml&title=%5BFeedback%5D%3A+"
+			return "https://github.com/cayo-rodrigues/nff/issues/new?assignees=cayo-rodrigues&labels=feedback&projects=&template=feedback.yaml&title=%5BFeedback%5D%3A+"
 	}
 	return ""
 }
