--- a/web/ui/components/entities.templ
+++ b/web/ui/components/entities.templ
@@ -106,6 +106,7 @@ templ SearchBar() {
 			class="w-full rounded-e py-2 pr-2 outline-0"
 			type="text"
 			name="q"
+			id="search-bar"
 			placeholder="Nome, IE, CPF/CNPJ, E-mail ou Tipo"
 			hx-get="/entities/search"
 			hx-trigger="keyup delay:0.2s"
