feat: home page content!
- still gotta make it pretier
- still gotta record video
- still have to think about things like lgpd and terms of use

--- a/web/ui/pages/home.templ
+++ b/web/ui/pages/home.templ
@@ -1,5 +1,47 @@
 package pages
 
 templ HomePage() {
-	<h2>Home!</h2>
+	<h1 class="my-2 text-2xl font-medium">Bem vindo ao NFF - Nota Fiscal Fácil!</h1>
+	<p class="border-l-4 border-gray-500 pl-3 text-base text-gray-700">Você vai ver que realmente é <strong>fácil</strong>.</p>
+	<h2 class="my-4 text-xl">Mas o que é o NFF? Onde vive? O que come?</h2>
+	<p class="my-2 text-base">
+		<em>NFF (<b>N</b>ota <b>F</b>iscal <b>F</b>ácil)</em> é um sistema online que <strong>facilita sua vida e economiza seu tempo</strong>.
+	</p>
+	<ul class="my-2 list-disc pl-6 text-base">
+		<li>
+			Quantas vezes você já precisou emitir notas fiscais no 
+			<a
+				class="text-blue-500 underline visited:text-purple-600 hover:text-blue-700"
+				href="https://www2.fazenda.mg.gov.br/sol/"
+				target="_blank"
+			>
+				Siare
+			</a>, para produtores rurais?
+		</li>
+		<li>Quantas vezes já precisou cancelar ou imprimir uma nota específica?</li>
+		<li>
+			E quantas vezes produtores vieram a sua procura no final do ano para poder saber qual foi o lucro e a despesa total deles durante aquele ano,
+			afim de fazerem a declaração do imposto de renda para a Receita Federal?
+		</li>
+		<li>Por acaso você já precisou consultar NFA no Siare e olhar registro por registro, para poder fazer esse cálculo?</li>
+	</ul>
+	<p class="my-2 text-base">
+		Talvez você já tenha se perguntado:
+	</p>
+	<ul class="my-2 list-disc pl-6 text-base">
+		<li>E se houvesse um sistema mais <em>simples e rápido</em> para emitir, cancelar e imprimir notas?</li>
+		<li>E se você pudesse realizar diversas operações <em>ao mesmo tempo</em> para quantos produtores quisesse?</li>
+		<li>E se fosse possível calcular entrada e saída do ano todo auto<b>mágicamente</b>, e ainda possuir acesso a cada registro individual?</li>
+	</ul>
+	<h3 class="my-4 text-xl">O NFF resolve tudo isso pra você! </h3>
+	<p class="my-2 text-base">Confira as vantagens que você pode ter:</p>
+	<ul class="my-2 list-disc pl-6 text-base">
+		<li>Emissão de notas em menos de <strong>1 minuto</strong></li>
+		<li>Cancelamento e impressão de notas em menos de <strong>20 segundos</strong></li>
+		<li>Cálculo de métricas do <em>ano inteiro</em> em apenas <strong>4 minutos</strong></li>
+		<li>Um registro <em>seguro</em> e <em>prático</em> dos dados dos produtores para os quais você presta serviço</li>
+	</ul>
+	<h2 class="my-4 text-xl">Como funciona?</h2>
+	<p class="my-2 text-base">Como já dito, é simples. Veja um vídeo do NFF em ação.</p>
+	<video width="" height="" controls></video>
 }
