--- a/web/ui/layouts/base.templ
+++ b/web/ui/layouts/base.templ
@@ -12,7 +12,7 @@ templ Base(page templ.Component) {
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 			<link href="/static/css/tailwind.css" rel="stylesheet"/>
 			<link href="/static/css/custom.css" rel="stylesheet"/>
-			<link rel="icon" href="/static/icons/icon.ico" type="image/x-icon"/>
+			<link rel="icon" href="/static/icons/logo.png" type="image/png"/>
 			<script src="/static/js/3p/htmx.min.js"></script>
 			<script src="/static/js/3p/response-targets.js"></script>
 			<script src="/static/js/3p/sse.js"></script>
